@@ -5489,7 +5489,7 @@
     "            - layer_sizes: A dictionary with layer names as keys and their sizes as entries in NumPy array format.\n",
     "\n",
     "    Examples:\n",
-    "        >>> # Example usage (as described in the original function's docstring)\n",
+    "        # Example usage (as described in the original function's docstring)\n",
     "    \"\"\"\n",
     "    weights = {}\n",
     "    index = []\n",
@@ -5706,7 +5706,7 @@
     "            - layer_sizes: A dictionary with layer names as keys and their sizes as entries in NumPy array format.\n",
     "\n",
     "    Examples:\n",
-    "        >>> # Example usage to compute gradients\n",
+    "        # Example usage to compute gradients\n",
     "    \"\"\"\n",
     "    net.eval()\n",
     "    dataset = fun_control[\"data_set\"]\n",
@@ -5870,7 +5870,7 @@
     "        tuple: A tuple containing the activations, mean activations, and layer sizes for each layer.\n",
     "\n",
     "    Examples:\n",
-    "        >>> from spotpython.plot.xai import get_activations\n",
+    "        from spotpython.plot.xai import get_activations\n",
     "            activations, mean_activations, layer_sizes = get_activations(net, fun_control)\n",
     "    \"\"\"\n",
     "    activations = {}\n",
@@ -7038,6 +7038,61 @@
     "# validation and test should give the same result, because the data is the same\n",
     "trainer.validate(net_light_base, val_loader)\n",
     "trainer.test(net_light_base, test_loader)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test Objective Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 36., 405.,  -3.])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from spotpython.fun.objectivefunctions import analytical\n",
+    "import numpy as np\n",
+    "X = np.array([[1, 2, 3], [4, 5, 6], [-1, -1, -1]])\n",
+    "fun = analytical()\n",
+    "fun.fun_cubed(X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([158.28245046, 409.33182691])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from spotpython.fun.objectivefunctions import analytical\n",
+    "import numpy as np\n",
+    "X = np.array([np.zeros(10), np.ones(10)])\n",
+    "fun = analytical()\n",
+    "fun.fun_wingwt(X)"
    ]
   },
   {
