@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "spotpython"
-version = "0.18.13"
+version = "0.18.14"
 authors = [
   { name="T. Bartz-Beielstein", email="tbb@bartzundbartz.de" }
 ]
@@ -36,14 +36,14 @@ dependencies = [
   "mkdocs-gen-files>=0.5.0",
   "mkdocs-literate-nav>=0.6.1",
   "mkdocs-section-index>=0.3.9",
-  "numpy",
+  "numpy>=2.1.0",
   "nbformat",
   "pandas",
   "plotly",
   "PyQt6",
   "python-markdown-math",
   "pytorch-lightning>=1.4",
-  "river>=0.21.0",
+  "river>=0.22.0",
   "scikit-learn",
   "scipy",
   "spotriver>=0.4.1",
