@@ -1,3 +1,11 @@
+spotpython 0.18.14:
+
+- "river>=0.22.0" and   "numpy>=2.1.0" updated in the dependencies
+
+- objectivefunctions.py:
+    doc updated
+
+
 spotpackage 0.18.13:
 
 - listgenerator.py:
